Turn off signing

--- a/src/System.Web.Optimization/System.Web.Optimization.csproj
+++ b/src/System.Web.Optimization/System.Web.Optimization.csproj
@@ -41,7 +41,7 @@
     <DocumentationFile>bin\Release\System.Web.Optimization.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
