--- a/src/WebForms/Microsoft.AspNet.Web.Optimization.WebForms.csproj
+++ b/src/WebForms/Microsoft.AspNet.Web.Optimization.WebForms.csproj
@@ -18,7 +18,7 @@
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
     <AssemblyOriginatorKeyFile>..\System.Web.Optimization\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <DelaySign>true</DelaySign>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
